@@ -1,4 +1,4 @@
-# $NetBSD: deinstall,v 1.1.1.1 2002/03/24 03:10:58 uebayasi Exp $
+# $NetBSD: DEINSTALL,v 1.1 2004/11/29 15:00:42 uebayasi Exp $
 
 PREFIX=@PREFIX@
 X11BASE=@X11BASE@
@@ -7,14 +7,8 @@ X11FONTSSUBDIR=@X11FONTSSUBDIR@
 X11FONTSDIR=${X11FONTSPREFIX}/${X11FONTSSUBDIR}
 
 case ${STAGE} in
-DEINSTALL)
-	;;
 POST-DEINSTALL)
 	${X11BASE}/bin/mkfontdir ${X11FONTSDIR}
-	;;
-*)
-	${ECHO} "Unexpected argument: ${STAGE}"
-	exit 1
 	;;
 esac
 exit 0
